<resources>
    <!--<string name="app_name">Proyecto_PGL_v2</string>-->
    <string name="app_name">APP PGL</string>
    <string name="tareas">Tareas</string>
    <string name="nom">Nombre</string>
    <string name="ap">Apellido</string>
    <string name="mail">Correo</string>
    <string name="con">Contraseña</string>
    <string name="reg">REGISTRAR</string>
    <string name="registro">Registro</string>
    <string name="regC">Registrado Correctamente</string>
    <string name="regE">ERROR: Correo en uso</string>
    <string name="log">INICIAR SESIÓN</string>
    <string name="logC">Sesión Iniciada Correctamente</string>
    <string name="logE">ERROR: Usuario No Encontrado</string>
    <string name="logE2">ERROR: Contraseña Incorrecta</string>
    <string name="user">Usuario</string>
    <string name="ac">Acerca de</string>
    <string name="conf">Configuración</string>
    <string name="edit">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="or">Ordenar</string>
    <string name="az">Alfabéticamente (A-Z)</string>
    <string name="za">Alfabéticamente (Z-A)</string>
    <string name="feNew">Fecha (más recientes)</string>
    <string name="feOld">Fecha (más antiguas)</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="cerrarC">Sesión Cerrada Correctamente</string>
    <string name="cerrarE">ERROR al Cerrar Sesión</string>
    <string name="PGL">IES El Rincón - 2022 PGL</string>
    <string name="yo">Héctor Olivares Sánchez</string>
    <string name="tit">Título</string>
    <string name="tit2">Título:</string>
    <string name="eTit">Escribe un Título</string>
    <string name="des">Descripción</string>
    <string name="des2">Descripción:</string>
    <string name="eDes">Escribe una Descripción</string>
    <string name="fe">Fecha</string>
    <string name="fe2">Fecha:</string>
    <string name="crear">CREAR</string>
    <string name="editar">EDITAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="campos">*DEBE RELLENAR TODOS LOS CAMPOS</string>
    <string name="crearC">Tarea Creada Correctamente</string>
    <string name="editarC">Tarea Editada Correctamente</string>
    <string name="borrarC">Tarea Borrada Correctamente</string>
    <string name="users">Usuarios</string>
    <string name="nomyap">Nombre y Apellidos</string>
    <string name="his">Historial</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="salir">Salir</string>
    <string name="sig">Siguiente</string>
    <string name="formato">dd/mm/aaaa</string>
    <string name="crearE">ERROR al Crear Tarea</string>
    <string name="elim">Eliminar</string>
    <string name="editarE">ERROR al Editar la Tarea</string>
    <string name="actC">Usuario Actualizado Correctamente</string>
    <string name="actE">ERROR al Actualizar Usuario</string>
    <string name="fav">Favoritos</string>
    <string name="elimC">Tarea Eliminada Correctamente</string>
    <string name="elimE">ERROR al Eliminar Tarea</string>
    <string name="id">Id</string>
    <string name="pre">Predeterminado</string>
</resources>