<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/llReg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_animation" >

    <include layout="@layout/toolbar_back"/>

    <LinearLayout android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@android:dimen/app_icon_size"
        tools:ignore="UseCompoundDrawables">

        <TextView android:text="@string/registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@android:dimen/app_icon_size"
            android:fontFamily="@font/fura_code_mono" />

        <Space android:layout_width="0dp"
            android:layout_height="20dp" />

        <EditText android:id="@+id/etNomReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"
            android:inputType="textCapWords"
            android:importantForAutofill="no"
            android:padding="10dp"
            android:background="@drawable/et_login" />

        <Space android:layout_width="0dp"
            android:layout_height="20dp" />

        <EditText android:id="@+id/etApReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ap"
            android:inputType="textCapWords"
            android:importantForAutofill="no"
            android:padding="10dp"
            android:background="@drawable/et_login" />

        <Space android:layout_width="0dp"
            android:layout_height="20dp" />

        <EditText android:id="@+id/etMailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_user"
            android:background="@drawable/et_login" />

        <Space android:layout_width="0dp"
            android:layout_height="20dp" />

        <EditText android:id="@+id/etConReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/con"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock"
            android:background="@drawable/et_login" />

        <Space android:layout_width="0dp"
            android:layout_height="@android:dimen/app_icon_size" />

        <Button android:id="@+id/btnRReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/reg"
            app:backgroundTint="@color/color1"
            android:background="@drawable/btn_rounded"/>

    </LinearLayout>

</LinearLayout>