<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3" >

    <include layout="@layout/toolbar_back" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@android:dimen/app_icon_size" >

        <View android:layout_height="3dp"
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_marginBottom="20dp"/>

        <TextView android:id="@+id/tvMosTit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tit"
            android:textColor="@color/black"
            android:textSize="@android:dimen/app_icon_size"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView android:id="@+id/tvMosDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/des"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:layout_marginBottom="10dp"/>

        <TextView android:id="@+id/tvMosFe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fe"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <View android:layout_height="3dp"
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="@android:dimen/app_icon_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button android:id="@+id/btnMosElim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elim"
                app:backgroundTint="@color/color10"
                android:background="@drawable/btn_rounded"/>

            <Space
                android:layout_width="45dp"
                android:layout_height="0dp" />

            <Button android:id="@+id/btnMosEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar"
                app:backgroundTint="@color/color1"
                android:background="@drawable/btn_rounded"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>