<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/llLogin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_animation">

    <include layout="@layout/toolbar_login"/>

    <LinearLayout android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="@android:dimen/app_icon_size"
        tools:ignore="UseCompoundDrawables">

        <ImageView android:src="@mipmap/logo_blanco"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/tareas" />

        <TextView android:text="@string/tareas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@android:dimen/app_icon_size"
            android:fontFamily="@font/fura_code_mono" />

    </LinearLayout>

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@android:dimen/app_icon_size"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <EditText android:id="@+id/etMailLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_user"
            android:background="@drawable/et_login"/>

        <Space android:layout_width="0dp"
            android:layout_height="20dp" />

        <EditText android:id="@+id/etConLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/con"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock"
            android:background="@drawable/et_login"/>

        <Space android:layout_width="0dp"
            android:layout_height="@android:dimen/app_icon_size" />
        <Space android:layout_width="0dp"
            android:layout_height="@android:dimen/app_icon_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button android:id="@+id/btnRLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg"
                app:backgroundTint="@color/color1"
                android:background="@drawable/btn_rounded"/>

            <Space
                android:layout_width="45dp"
                android:layout_height="0dp" />

            <Button android:id="@+id/btnISLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log"
                app:backgroundTint="@color/color1"
                android:background="@drawable/btn_rounded"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>