<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/llNDrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="RtlSymmetry,UseCompoundDrawables"
        android:background="@drawable/background_animation"
        android:onClick="Cerrar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo_negro"
            tools:ignore="ContentDescription" />

        <TextView android:id="@+id/tvNDNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomyap"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView android:id="@+id/tvNDMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textSize="18sp"
            android:textColor="@color/black" />

    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="UseCompoundDrawables">

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:padding="5dp"
            android:background="@drawable/item"
            android:onClick="tareas">

            <ImageView android:src="@drawable/ic_task"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/tareas"
                app:tint="@color/color5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tareas"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:padding="5dp"
            android:background="@drawable/item"
            android:onClick="conf">

            <ImageView android:src="@drawable/ic_settings"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                app:tint="@color/color5"
                android:contentDescription="@string/conf" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/conf"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:padding="5dp"
            android:background="@drawable/item"
            android:onClick="acercaDe">

            <ImageView android:src="@drawable/ic_info"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                app:tint="@color/color5"
                android:background="@drawable/img_rounded"
                android:contentDescription="@string/ac" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="@color/hint" />

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:padding="5dp"
            android:background="@drawable/item"
            android:onClick="cerrarSesion">

            <ImageView android:src="@drawable/ic_user"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                app:tint="@color/color5"
                android:contentDescription="@string/cerrar" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cerrar"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>